[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
rusqlite = { version = "0.31.0", features = ["bundled","serde_json"] }
serde = {version="1.0.196",features=["serde_derive"]}
serde_json = "1.0.112"
bcrypt = "0.15.0"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true


